# pkg/pb/cmdb.pb.atlas.validate.go
@@ -725,6 +725,12 @@ func validate_Manifest_ManifestCreate_0(ctx context.Context, r json.RawMessage) 
 	return validate_Object_ManifestCreateRequest(ctx, r, "")
 }
 
+// validate_Manifest_ManifestConfigCreate_0 is an entrypoint for validating "POST" HTTP request
+// that match *.pb.gw.go/pattern_Manifest_ManifestConfigCreate_0.
+func validate_Manifest_ManifestConfigCreate_0(ctx context.Context, r json.RawMessage) (err error) {
+	return validate_Object_ManifestConfigCreateRequest(ctx, r, "")
+}
+
 // validate_Object_VersionResponse function validates a JSON for a given object.
 func validate_Object_VersionResponse(ctx context.Context, r json.RawMessage, path string) (err error) {
 	if hook, ok := interface{}(&VersionResponse{}).(interface {
@@ -12867,6 +12873,124 @@ func validate_required_Object_ManifestCreateResponse(ctx context.Context, v map[
 	return nil
 }
 
+// validate_Object_ManifestConfigCreateRequest function validates a JSON for a given object.
+func validate_Object_ManifestConfigCreateRequest(ctx context.Context, r json.RawMessage, path string) (err error) {
+	if hook, ok := interface{}(&ManifestConfigCreateRequest{}).(interface {
+		AtlasJSONValidate(context.Context, json.RawMessage, string) (json.RawMessage, error)
+	}); ok {
+		if r, err = hook.AtlasJSONValidate(ctx, r, path); err != nil {
+			return err
+		}
+	}
+
+	var v map[string]json.RawMessage
+	if err = json.Unmarshal(r, &v); err != nil {
+		return fmt.Errorf("invalid value for %q: expected object.", path)
+	}
+
+	if err = validate_required_Object_ManifestConfigCreateRequest(ctx, v, path); err != nil {
+		return err
+	}
+
+	allowUnknown := runtime1.AllowUnknownFromContext(ctx)
+
+	for k, _ := range v {
+		switch k {
+		case "app_instance_id":
+			if v[k] == nil {
+				continue
+			}
+			vv := v[k]
+			vvPath := runtime1.JoinPath(path, k)
+			validator, ok := interface{}(&resource.Identifier{}).(interface {
+				AtlasValidateJSON(context.Context, json.RawMessage, string) error
+			})
+			if !ok {
+				continue
+			}
+			if err = validator.AtlasValidateJSON(ctx, vv, vvPath); err != nil {
+				return err
+			}
+		case "lifecycle_skip_values":
+		case "env_skip_values":
+		default:
+			if !allowUnknown {
+				return fmt.Errorf("unknown field %q.", runtime1.JoinPath(path, k))
+			}
+		}
+	}
+	return nil
+}
+
+// AtlasValidateJSON function validates a JSON for object ManifestConfigCreateRequest.
+func (_ *ManifestConfigCreateRequest) AtlasValidateJSON(ctx context.Context, r json.RawMessage, path string) (err error) {
+	if hook, ok := interface{}(&ManifestConfigCreateRequest{}).(interface {
+		AtlasJSONValidate(context.Context, json.RawMessage, string) (json.RawMessage, error)
+	}); ok {
+		if r, err = hook.AtlasJSONValidate(ctx, r, path); err != nil {
+			return err
+		}
+	}
+	return validate_Object_ManifestConfigCreateRequest(ctx, r, path)
+}
+
+func validate_required_Object_ManifestConfigCreateRequest(ctx context.Context, v map[string]json.RawMessage, path string) error {
+	method := runtime1.HTTPMethodFromContext(ctx)
+	_ = method
+	return nil
+}
+
+// validate_Object_ManifestConfigCreateResponse function validates a JSON for a given object.
+func validate_Object_ManifestConfigCreateResponse(ctx context.Context, r json.RawMessage, path string) (err error) {
+	if hook, ok := interface{}(&ManifestConfigCreateResponse{}).(interface {
+		AtlasJSONValidate(context.Context, json.RawMessage, string) (json.RawMessage, error)
+	}); ok {
+		if r, err = hook.AtlasJSONValidate(ctx, r, path); err != nil {
+			return err
+		}
+	}
+
+	var v map[string]json.RawMessage
+	if err = json.Unmarshal(r, &v); err != nil {
+		return fmt.Errorf("invalid value for %q: expected object.", path)
+	}
+
+	if err = validate_required_Object_ManifestConfigCreateResponse(ctx, v, path); err != nil {
+		return err
+	}
+
+	allowUnknown := runtime1.AllowUnknownFromContext(ctx)
+
+	for k, _ := range v {
+		switch k {
+		case "config":
+		default:
+			if !allowUnknown {
+				return fmt.Errorf("unknown field %q.", runtime1.JoinPath(path, k))
+			}
+		}
+	}
+	return nil
+}
+
+// AtlasValidateJSON function validates a JSON for object ManifestConfigCreateResponse.
+func (_ *ManifestConfigCreateResponse) AtlasValidateJSON(ctx context.Context, r json.RawMessage, path string) (err error) {
+	if hook, ok := interface{}(&ManifestConfigCreateResponse{}).(interface {
+		AtlasJSONValidate(context.Context, json.RawMessage, string) (json.RawMessage, error)
+	}); ok {
+		if r, err = hook.AtlasJSONValidate(ctx, r, path); err != nil {
+			return err
+		}
+	}
+	return validate_Object_ManifestConfigCreateResponse(ctx, r, path)
+}
+
+func validate_required_Object_ManifestConfigCreateResponse(ctx context.Context, v map[string]json.RawMessage, path string) error {
+	method := runtime1.HTTPMethodFromContext(ctx)
+	_ = method
+	return nil
+}
+
 var validate_Patterns = []struct {
 	pattern    runtime.Pattern
 	httpMethod string
@@ -13425,6 +13549,12 @@ var validate_Patterns = []struct {
 		pattern:      pattern_Manifest_ManifestCreate_0,
 		httpMethod:   "POST",
 		validator:    validate_Manifest_ManifestCreate_0,
+		allowUnknown: false,
+	},
+	{
+		pattern:      pattern_Manifest_ManifestConfigCreate_0,
+		httpMethod:   "POST",
+		validator:    validate_Manifest_ManifestConfigCreate_0,
 		allowUnknown: false,
 	},
 }
