# pkg/pb/cmdb.swagger.json
@@ -1778,6 +1778,25 @@
         "responses": {}
       }
     },
+    "/manifest/config": {
+      "post": {
+        "tags": [
+          "Manifest"
+        ],
+        "operationId": "ManifestManifestConfigCreate",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/cmdbManifestConfigCreateRequest"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/networks": {
       "get": {
         "tags": [
@@ -2832,6 +2851,25 @@
         "name": {
           "type": "string",
           "title": "The name of the Lifecycle"
+        }
+      }
+    },
+    "cmdbManifestConfigCreateRequest": {
+      "type": "object",
+      "properties": {
+        "app_instance_id": {
+          "description": "The resource identifier.",
+          "type": "string"
+        },
+        "env_skip_values": {
+          "type": "boolean",
+          "format": "boolean",
+          "title": "Optional if you want to skip environment Values"
+        },
+        "lifecycle_skip_values": {
+          "type": "boolean",
+          "format": "boolean",
+          "title": "Optional if you want to skip Lifecycle Values"
         }
       }
     },
